@@ -8,3 +8,6 @@
 
 - use gnutls
 - MODE #channel and WHO #channel on join
+11:23 < KiBi> Un /away truc chose automatique quand plus aucun client n'est
+              attaché.
+- in english: automatic command when no more client is connected
