@@ -72,7 +72,7 @@ network {
 user {
 	# The name in bip of the user
 	# This is used by bip only
-	name = "nohar";
+	name = "bip4ever";
 	# this user's password (md5(md5("tata"))) with seed - generated by bipmkpw
 	password = "3880f2b39b3b9cb507b052b695d2680859bfc327";
 
@@ -94,12 +94,12 @@ user {
 	# In "ca" mode, it's a directory of a standard openssl store; you must
 	# put PEM objects (certificates, CRLs...) with .pem extension and run
 	# `c_rehash .' in it
-	ssl_check_store = "/home/nohar/.bip/trustedcerts.txt";
+	ssl_check_store = "/home/bip4ever/.bip/trustedcerts.txt";
 
 	# These will be the default for each connections
-	default_nick = "nohar";
-	default_user = "nohar";
-	default_realname = "nohar";
+	default_nick = "bip4ever";
+	default_user = "bip4ever";
+	default_realname = "bip4ever";
 
 	# A user can have mutiple connections to irc networks.
 	# define a connection:
